Added basic lobby

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,6 +46,14 @@ input[type=submit]:hover {
   background: #61dafb;
 }
 
+#centered{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .App-link {
   color: #61dafb;
 }
