--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,10 +60,15 @@ input[type=submit]:hover {
 }
 
 #back {
+  padding: 0 0 0 0;
   align-self: baseline;
-  margin-top: -1em;
+  margin-top: -40px;
+  margin-left: -20px;
   margin-bottom: 1em;
   float: left;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 .formtable{
