--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,6 +11,18 @@
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+#game-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.player-icon {
+  margin: 1em 1em 1em 1em;
+  text-align: center;
 }
 
 input[type=text] {
@@ -62,8 +63,8 @@ input[type=submit]:hover {
 #back {
   padding: 0 0 0 0;
   align-self: baseline;
-  margin-top: -40px;
-  margin-left: -20px;
+  margin-top: -20px;
+  margin-left: -10px;
   margin-bottom: 1em;
   float: left;
   background: none;
@@ -74,7 +75,8 @@ input[type=submit]:hover {
 .formtable{
   background-color: #eeeeee;
   color: #282c34;
-  padding: 1.5em 1em 1.5em 1em;
+  padding: 30px 20px 30px 20px;
+  /*padding: 1.5em 1em 1.5em 1em;*/
 }
 
 .buttons {
@@ -111,13 +113,4 @@ button {
 
 button:hover {
   background: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
