--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -153,8 +153,12 @@ input[type=submit]:hover {
   flex-direction: column;
 }
 
+#header {
+  padding: 0 0 30vh 0;
+}
+
 h1 {
-  padding: 2em 0 3em 0;
+  margin-bottom: -0.9em;
 }
 
 .form-button {
