--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Poppins:wght@500&display=swap');
+
+body{
+  background-color:#282c34;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
 .App {
   text-align: center;
 }
@@ -9,7 +50,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2vmin);  
   color: white;
 }
 
@@ -39,8 +80,16 @@
 
 input[type=text] {
   height: calc(10px + 2vmin);
-  font-size: calc(10px + 2vmin);
-  padding-top: 10px;
+  width:calc(165px + 2vmin);
+  padding-left:5px;
+  padding-top: 5px;
+  padding-bottom:5px;
+  border-radius:10px;
+  background:none;
+  text-align:center;
+  font-size: 20px;
+  font-weight:0px;
+  font-family:'Poppins', Arial, sans-serif;
 }
 
 input[type=submit] {
@@ -48,16 +97,16 @@ input[type=submit] {
   width: 100%;
   background: #00abc6;
   color: #fff;
-  font-family: 'TitilliumText22LRegular', Arial, sans-serif;
-  font-weight:bold;
-  font-size: 1.1em;
+  font-family: 'Poppins', Arial, sans-serif;
+  font-weight:0;
+  font-size: 0.9em;
   padding: 0.5em 0.5em;
-  border-radius: 0;
+  border-radius: 10px;
   margin: 0.7em 0 -1em 0;
 }
 
 input[type=submit]:hover {
-  background: #61dafb;
+  background: #006E7F;
 }
 
 #centered{
@@ -69,25 +118,40 @@ input[type=submit]:hover {
 }
 
 #rules-box {
+  margin:10px;
   position: absolute;
   background: #eeeeee;
   top: 5%;
   padding: 30px 20px 5px 20px;
   min-height: 10vh;
-  height: 80%;
+  height:80%;
   width: 60%;
   color: #282c34;
   font-size: 0.7em;
   text-align: left;
   overflow-y: scroll;
+  border-radius:10px;
   z-index: 1;
 }
 
 #rules-button {
+  flex:1;
+  border:none;
+  padding:0.5em;
+  background:#fff;
+  color:#282c34;
+  margin-top:15px;
+  margin-right:10px;
+  border-radius:10px;
   position: absolute;
   right: 1em;
-  font-size: 0.8em;
+  font-family: 'Poppins', Arial, sans-serif;
+  font-size: 0.5em;
   cursor: pointer;
+}
+
+#rules-button:hover{
+  background:#999;
 }
 
 .App-link {
@@ -115,9 +179,9 @@ input[type=submit]:hover {
 
 #footer {
   text-align: center;
-  font-size: 0.8em;
+  font-size: 1em;
   position: fixed;
-  bottom: 0;
+  bottom: 30px;
   color: white;
   left: 0;
   right: 0;
@@ -128,7 +192,7 @@ input[type=submit]:hover {
   border: white;
   border-radius: 10px;
   color: #fff;
-  font-family: 'TitilliumText22LRegular', Arial, sans-serif;
+  font-family: 'Alata', Arial, sans-serif;
   font-size: 0.7em;
   cursor: pointer;
 }
@@ -137,10 +201,30 @@ input[type=submit]:hover {
   background-color: #eeeeee;
   color: #282c34;
   padding: 30px 20px 30px 20px;
+  text-align: center;
+  width:300px;
+}
+
+#create-name{
+  margin:0px;
+  font-size:20px;
+  font-weight:bold;
+  word-wrap:break-word;
+  margin-bottom:0.6em;
+  font-family: 'Poppins', Arial, sans-serif;
+}
+
+#create-code{
+  margin:0px;
+  font-size:20px;
+  font-weight:bold;
+  word-wrap:break-word;
+  margin-top:0.8em;
+  font-family: 'Poppins', Arial, sans-serif;
 }
 
 .buttons {
-  width: 20%;
+  width: 15%;
   table-layout: fixed;
 }
 
@@ -154,7 +238,8 @@ input[type=submit]:hover {
 }
 
 #header {
-  padding: 0 0 30vh 0;
+  font-family: 'Alata', Arial, sans-serif;
+  padding: 0 0 20vh 0;
 }
 
 h1 {
@@ -167,16 +252,39 @@ h1 {
   padding: 0.5em;
   background: #00abc6;
   color: #fff;
-  font-family: 'TitilliumText22LRegular', Arial, sans-serif;
-  font-weight:bold;
-  font-size: 1.1em;
-  border-radius: 0;
+  margin: 5px;
+  font-family: 'Poppins', Arial, sans-serif;
+  font-weight:0px;
+  font-size: 0.9em;
+  border-radius: 10px;
 }
 
 .form-button:hover {
-  background: #61dafb;
+  /* background: #61dafb; */
+  background:#006E7F;
 }
 
 a {
   color: white;
 }
+
+#captain-color{
+  color: #FF863A;
+}
+
+#assassin-color{
+  color:#FF595E;
+}
+
+#duke-color{
+  color:#8AC926
+}
+
+#ambassador-color{
+  color:#1982C4;
+}
+
+#contessa-color{
+  color:#6A4C93;
+}
+
