--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,10 +75,23 @@ body {
 }
 
 .game-container {
+    background-color:#00abc6;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.card-container{
+    background-color:#fff;
+    color: #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+    margin-bottom:5px;
+    border-radius: 10px;
 }
 
 .player-icon {
@@ -93,9 +106,11 @@ body {
 }
 
 .local-player-icon {
-    margin: 1em 1em 1em 1em;
+    background-color: #000;
+    margin: 1.1em 1.1em 1.1em 1.1em;
     text-align: center;
     border: double white;
+    border-radius:10px;
 }
 
 input[type=text] {
@@ -227,6 +242,7 @@ input[type=submit]:hover {
     padding: 30px 20px 30px 20px;
     text-align: center;
     width: 300px;
+    border-radius: 10px;
 }
 
 #create-name {
