--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -130,6 +130,7 @@ input[type=submit]:hover {
 }
 
 #centered {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
