Replaced hl tag with span, changed container color.
small ui tweaks with in game ui | commit before upstream/merge

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -74,7 +74,7 @@ body {
 }
 
 .game-container {
-    background-color: #00abc6;
+    background-color: #282c34;
     display: flex;
     flex-direction: row;
     align-items: center;
