--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -95,16 +95,21 @@ body {
 }
 
 .card-names {
+  height: 1.5em;
+  width:7em;
+  line-height:1.5em;
   margin: 1em 1em 1em 1em;
   text-align: center;
   font-size: 0.8em;
+  border-radius: 10px;
+  background-color: #373d48;
 }
 
 .choice-icon {
   height: 1em;
   width: 9em;
   line-height: 1em;
-  font-size: 0.7em;
+  font-size: 0.9em;
   margin: 0.5em 0.5em 0.5em 0.5em;
   padding: 0.5em 0.5em 0.5em 0.5em;
   text-align: center;
