--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -107,7 +107,10 @@ body {
 
 .choice-icon {
   height: 1em;
-  width: 9em;
+  width: 10em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   line-height: 1em;
   font-size: 0.9em;
   margin: 0.5em 0.5em 0.5em 0.5em;
