--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,132 +1,194 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Poppins:wght@500&display=swap");
 
 body {
-    background-color: #282c34;
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 2s; /* Firefox < 16 */
-    -ms-animation: fadein 2s; /* Internet Explorer */
-    -o-animation: fadein 2s; /* Opera < 12.1 */
-    animation: fadein 2s;
-
+  background-color: #282c34;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
 }
 
 @keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .game-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  background-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-family: "Alata", Arial, sans-serif;
 }
 
-.player-icon {
-    margin: 1em 1em 1em 1em;
-    text-align: center;
+.card-container {
+  background-color: #fff;
+  color: #000;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 10px;
 }
 
 .card-names {
-    margin: 1em 1em 1em 1em;
-    text-align: center;
-    font-size: 0.8em;
+  height: 1.5em;
+  width:7em;
+  line-height:1.5em;
+  margin: 1em 1em 1em 1em;
+  text-align: center;
+  font-size: 0.8em;
+  border-radius: 10px;
+  background-color: #373d48;
+}
+
+.choice-icon {
+  height: 1em;
+  width: 10em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  line-height: 1em;
+  font-size: 0.9em;
+  margin: 0.5em 0.5em 0.5em 0.5em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #596273;
+  color: white;
+}
+
+.player-icon {
+  height: 4em;
+  width: 6.3em;
+  font-size: 0.8em;
+  margin: 0.5em 0.5em 0.5em 0.5em;
+  padding: 0.5em 0.5em 0.8em 0.5em;
+  text-align: center;
+  border-radius: 10px;
 }
 
 .local-player-icon {
-    margin: 1em 1em 1em 1em;
-    text-align: center;
-    border: double white;
+  /* background-color: #000; */
+  height: 4em;
+  width: 6.3em;
+  font-size: 0.8em;
+  margin: 0.5em 0.5em 0.5em 0.5em;
+  padding: 0.5em 0.5em 0.8em 0.5em;
+  text-align: center;
+  /* border: double white; */
+  border-left: 6px solid red;
+  border-radius: 10px;
 }
 
-input[type=text] {
-    height: calc(10px + 2vmin);
-    width: calc(165px + 2vmin);
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-radius: 10px;
-    background: none;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 0;
-    font-family: 'Poppins', Arial, sans-serif;
+#playerText {
+  color: #434956;
+  font-size: 1.3em;
+  font-family: "Alata", Arial, sans-serif;
 }
 
-input[type=submit] {
-    border: none;
-    width: 100%;
-    background: #00abc6;
-    color: #fff;
-    font-family: 'Poppins', Arial, sans-serif;
-    font-weight: 0;
-    font-size: 0.9em;
-    padding: 0.5em 0.5em;
-    border-radius: 10px;
-    margin: 0.7em 0 -1em 0;
+#coinText {
+  font-size: 0.8em;
+  font-family: "Alata", Arial, sans-serif;
 }
 
-input[type=submit]:hover {
-    background: #006E7F;
+#influenceText {
+  font-size: 0.8em;
+  font-family: "Alata", Arial, sans-serif;
+}
+
+input[type="text"] {
+  height: calc(10px + 2vmin);
+  width: calc(165px + 2vmin);
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 10px;
+  background: none;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 0;
+  font-family: "Poppins", Arial, sans-serif;
+}
+
+input[type="submit"] {
+  border: none;
+  width: 100%;
+  background: #00abc6;
+  color: #fff;
+  font-family: "Poppins", Arial, sans-serif;
+  font-weight: 0;
+  font-size: 0.9em;
+  padding: 0.5em 0.5em;
+  border-radius: 10px;
+  margin: 0.7em 0 -1em 0;
+}
+
+input[type="submit"]:hover {
+  background: #006e7f;
 }
 
 #centered {
@@ -138,83 +200,89 @@ input[type=submit]:hover {
 }
 
 #rules-box {
-    margin: 10px;
-    position: absolute;
-    background: #eeeeee;
-    top: 5%;
-    padding: 30px 20px 5px 20px;
-    min-height: 10vh;
-    height: 80%;
-    width: 60%;
-    color: #282c34;
-    font-size: 0.7em;
-    text-align: left;
-    overflow-y: scroll;
-    border-radius: 10px;
-    z-index: 1;
+  margin: 10px;
+  position: absolute;
+  background: #fff;
+  top: 5%;
+  padding: 30px 20px 5px 20px;
+  min-height: 10vh;
+  height: 80%;
+  width: 60%;
+  color: #282c34;
+  font-size: 0.7em;
+  text-align: left;
+  overflow-y: scroll;
+  border-radius: 10px;
+  z-index: 1;
 }
 
 #rules-button {
-    flex: 1;
-    border: none;
-    padding: 0.5em;
-    background: #fff;
-    color: #282c34;
-    margin-top: 15px;
-    margin-right: 10px;
-    border-radius: 10px;
-    position: absolute;
-    right: 1em;
-    font-family: 'Poppins', Arial, sans-serif;
-    font-size: 0.5em;
-    cursor: pointer;
+  flex: 1;
+  border: none;
+  padding: 0.5em;
+  background: #fff;
+  color: #282c34;
+  margin-top: 15px;
+  margin-right: 10px;
+  border-radius: 10px;
+  position: absolute;
+  right: 1em;
+  font-family: "Poppins", Arial, sans-serif;
+  font-size: 0.5em;
+  cursor: pointer;
 }
 
 #rules-button:hover {
-    background: #999;
+  background: #999;
+}
+
+#rules-button:hover {
+  background: #999;
 }
 
 .App-link {
-    color: #61dafb;
+  color: #61dafb;
 }
 
 #event-log {
-    position: fixed;
-    text-align: left;
-    left: 1ch;
-    font-size: 0.6em;
+  position: fixed;
+  text-align: left;
+  left: 1ch;
+  font-size: 0.5em;
+  font-family: "Alata", Arial, sans-serif;
 }
 
 #back {
-    padding: 0 0 0 0;
-    align-self: baseline;
-    margin-top: -20px;
-    margin-left: -10px;
-    margin-bottom: 1em;
-    float: left;
-    background: none;
-    border: none;
-    cursor: pointer;
+  padding: 0 0 0 0;
+  align-self: baseline;
+  margin-top: -20px;
+  margin-left: -10px;
+  margin-bottom: 1em;
+  float: left;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 #footer {
-    text-align: center;
-    font-size: 1em;
-    position: fixed;
-    bottom: 30px;
-    color: white;
-    left: 0;
-    right: 0;
+  text-align: center;
+  font-size: 0.8em;
+  font-family: "Alata", Arial, sans-serif;
+  position: fixed;
+  bottom: 25px;
+  color: white;
+  left: 0;
+  right: 0;
 }
 
 .game-button {
-    background: none;
-    border: white;
-    border-radius: 10px;
-    color: #fff;
-    font-family: 'Alata', Arial, sans-serif;
-    font-size: 0.7em;
-    cursor: pointer;
+  background: none;
+  border: white;
+  border-radius: 10px;
+  color: #fff;
+  font-family: "Alata", Arial, sans-serif;
+  font-size: 0.7em;
+  cursor: pointer;
 }
 
 .form-table {
@@ -228,28 +296,30 @@ input[type=submit]:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -40%);
+    border-radius:10px;
 }
 
 #copy-button {
-    height: 40px;
-    width: 40px;
-    padding: 5px -2px 5px -2px;
+  height: 30px;
+  width: 30px;
+  padding: 5px -2px 5px -2px;
+  border-radius: 10px;
 }
 
 #create-name {
-    font-size: 20px;
-    font-weight: bold;
-    word-wrap: break-word;
-    margin: 0 0 0.6em;
-    font-family: 'Poppins', Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  word-wrap: break-word;
+  margin: 0 0 0.6em;
+  font-family: "Poppins", Arial, sans-serif;
 }
 
 #create-code {
-    font-size: 20px;
-    font-weight: bold;
-    word-wrap: break-word;
-    margin: 0.8em 0 0;
-    font-family: 'Poppins', Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  word-wrap: break-word;
+  margin: 0.8em 0 0;
+  font-family: "Poppins", Arial, sans-serif;
 }
 
 .buttons {
@@ -264,63 +334,62 @@ input[type=submit]:hover {
 }
 
 .buttons tr {
-    display: flex;
+  display: flex;
 }
 
 .buttons tr td {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 #header {
-    font-family: 'Alata', Arial, sans-serif;
-    /*padding: 0 0 20vh 0;*/
+  font-family: 'Alata', Arial, sans-serif;
+  /*padding: 0 0 20vh 0;*/
 }
 
 h1 {
-    margin-bottom: -0.9em;
+  margin-bottom: -0.9em;
 }
 
 .form-button {
-    flex: 1;
-    border: none;
-    padding: 0.5em;
-    background: #00abc6;
-    color: #fff;
-    margin: 5px;
-    font-family: 'Poppins', Arial, sans-serif;
-    font-weight: 0;
-    font-size: 0.9em;
-    border-radius: 10px;
+  flex: 1;
+  border: none;
+  padding: 0.5em;
+  background: #00abc6;
+  color: #fff;
+  margin: 5px;
+  font-family: "Poppins", Arial, sans-serif;
+  font-weight: 0;
+  font-size: 0.9em;
+  border-radius: 10px;
 }
 
 .form-button:hover {
-    /* background: #61dafb; */
-    background: #006E7F;
+  /* background: #61dafb; */
+  background: #006e7f;
 }
 
 a {
-    color: white;
+  color: white;
 }
 
 #captain-color {
-    color: #FF863A;
+  color: #ff863a;
 }
 
 #assassin-color {
-    color: #FF595E;
+  color: #ff595e;
 }
 
 #duke-color {
-    color: #8AC926
+  color: #8ac926;
 }
 
 #ambassador-color {
-    color: #1982C4;
+  color: #1982c4;
 }
 
 #contessa-color {
-    color: #6A4C93;
+  color: #6a4c93;
 }
-
